--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@svgr/rollup": "^8.1.0",
     "@szhsin/react-menu": "^4.2.2",
     "aos": "^2.3.4",
     "react": "^18.3.1",
