--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sptest1",
   "private": true,
+  "homepage": "https://rajurao1106.github.io/sptest1",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
