--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "sptes",
+  "name": "sptest1",
+  "homepage": "https://rajurao1106.github.io/sptest1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
