--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@svgr/rollup": "^8.1.0",
     "@szhsin/react-menu": "^4.2.2",
     "aos": "^2.3.4",
+    "embla-carousel-react": "^8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
